use forked repos

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,74 @@ resolver = "1"
 panic = "unwind"
 
 [patch."https://github.com/paritytech/substrate"]
+frame-support = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+frame-system = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+
+sc-allocator = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-authority-discovery = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-basic-authorship = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-block-builder = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-cli = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-client-api = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-client-db = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-chain-spec = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
 sc-consensus = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-consensus-babe = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-consensus-epochs = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-consensus-grandpa = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-consensus-slots = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-executor = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-executor-common = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-keystore = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-network = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-network-common = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-network-gossip = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-network-sync = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-network-transactions = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-peerset = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-rpc = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-rpc-api = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-rpc-spec-v2 = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-service = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-telemetry = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-tracing = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-transaction-pool = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-transaction-pool-api = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sc-utils = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+
+sp-api = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-application-crypto = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-authority-discovery = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-arithmetic = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-block-builder = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-blockchain = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-consensus = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-consensus-babe = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-consensus-grandpa = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-consensus-slots = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-core = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-externalities = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-keyring = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-keystore = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-io = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-inherents = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-offchain = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-runtime = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-database = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-session = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-state-machine = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-storage = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-timestamp = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-transaction-pool = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
 sp-trie = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-version = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-wasm-interface = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+sp-weights = { git = "https://github.com/NodleCode/substrate", branch = "recue-nodle-parachain" }
+
+[patch."https://github.com/paritytech/cumulus"]
+cumulus-client-service = { git = "https://github.com/NodleCode/cumulus", branch = "rescue-nodle-parachain" }
+cumulus-client-cli = { git = "https://github.com/NodleCode/cumulus", branch = "rescue-nodle-parachain" }
+cumulus-relay-chain-minimal-node = { git = "https://github.com/NodleCode/cumulus", branch = "rescue-nodle-parachain" }
+cumulus-primitives-core = { git = "https://github.com/NodleCode/cumulus", branch = "rescue-nodle-parachain" }
+cumulus-relay-chain-interface = { git = "https://github.com/NodleCode/cumulus", branch = "rescue-nodle-parachain" }
+cumulus-client-consensus-common = { path = "../cumulus-nodle-fork/client/consensus/common" }
