--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,4 +78,4 @@ cumulus-client-cli = { git = "https://github.com/NodleCode/cumulus", branch = "r
 cumulus-relay-chain-minimal-node = { git = "https://github.com/NodleCode/cumulus", branch = "rescue-nodle-parachain" }
 cumulus-primitives-core = { git = "https://github.com/NodleCode/cumulus", branch = "rescue-nodle-parachain" }
 cumulus-relay-chain-interface = { git = "https://github.com/NodleCode/cumulus", branch = "rescue-nodle-parachain" }
-cumulus-client-consensus-common = { path = "../cumulus-nodle-fork/client/consensus/common" }
+cumulus-client-consensus-common = { git = "https://github.com/NodleCode/cumulus", branch = "rescue-nodle-parachain" }
