-l is not a valid option anymore

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,8 +138,8 @@ jobs:
         run: |
             install -d snapshots
             date > snapshots/created_at
-            try-runtime --runtime existing -lruntime=debug create-snapshot --uri ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}} snapshots/eden-snapshot-full
+            try-runtime --runtime existing create-snapshot --uri ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}} snapshots/eden-snapshot-full
       - name: Try runtime reuse snap
         run: |
             cat snapshots/created_at
-            try-runtime --runtime target/release/wbuild/runtime-eden/runtime_eden.wasm -lruntime=debug on-runtime-upgrade --checks=all snap -s snapshots/eden-snapshot-full
+            try-runtime --runtime target/release/wbuild/runtime-eden/runtime_eden.wasm on-runtime-upgrade --checks=all snap -s snapshots/eden-snapshot-full
