adjust cli args

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,4 +142,4 @@ jobs:
       - name: Try runtime reuse snap
         run: |
             cat snapshots/created_at
-            try-runtime --runtime target/release/wbuild/runtime-eden/runtime_eden.wasm on-runtime-upgrade --checks=all snap -s snapshots/eden-snapshot-full
+            try-runtime --runtime target/release/wbuild/runtime-eden/runtime_eden.wasm on-runtime-upgrade --checks=all snap --path snapshots/eden-snapshot-full
