--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
           path: snapshots
           key: ${{steps.get_version.outputs.eden_rev}}
       - name: Run try-runtime
-        uses: NodleCode/action-try-runtime
+        uses: NodleCode/action-try-runtime@78f23c4
         with:
           url: ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}}
           snap: snapshots/eden-snapshot-full
