--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -55,5 +55,9 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: |
+            type=gha
+            type=registry,ref=ghcr.io/nodlecode/chain:buildcache
+          cache-to: |
+            type=registry,ref=ghcr.io/nodlecode/chain:buildcache,mode=max
+            type=gha,mode=max
