--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Build official node docker images
 
 on:
   push:
@@ -9,58 +9,13 @@ on:
   pull_request:
 
 jobs:
-
-  container_gpr:
-    name: Build and push docker image
-    runs-on: ubuntu-latest
-
-    steps:
-
-      - name: Check out the repo
-        uses: actions/checkout@v3
-
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          # list of Docker images to use as base name for tags
-          images: |
-            nodlecode/chain
-            ghcr.io/nodlecode/chain
-          # generate Docker tags based on the following events/attributes
-          tags: |
-            type=schedule
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to GHCR
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Login to DockerHub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: './Dockerfile'
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: |
-            type=gha
-            type=registry,ref=ghcr.io/nodlecode/chain:buildcache
-          cache-to: |
-            type=registry,ref=ghcr.io/nodlecode/chain:buildcache,mode=max
-            type=gha,mode=max
+  parachain-node:
+    name: Build and push official collator docker images 
+    uses: ./.github/workflows/_docker.yml
+    secrets: inherit
+    with:
+      dockerfile: ./Dockerfile
+      images: |
+        nodlecode/chain
+        ghcr.io/nodlecode/chain
+      cache: ghcr.io/nodlecode/chain:buildcache
