fix runtime argument

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,5 +135,5 @@ jobs:
         with:
           url: ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}}
           snap: snapshots/eden-snapshot-full
-          runtime: target/release/wbuild/runtime-eden/runtime_eden.wasm on-runtime-upgrade
+          runtime: target/release/wbuild/runtime-eden/runtime_eden.wasm
           checks: all
