ensure snapshots folder is created

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,6 +130,11 @@ jobs:
         with:
           path: snapshots
           key: ${{steps.get_version.outputs.eden_rev}}
+      - name: Ensure cache directory is created
+        if: steps.cachedir.outputs.cache-hit != 'true'
+        run: |
+          install -d snapshots
+          date > snapshots/created_at
       - name: Run try-runtime
         uses: NodleCode/action-try-runtime@62a47e64e789d1c524d6c3e3c6ef36880a76901f
         with:
