--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,7 +136,7 @@ jobs:
           install -d snapshots
           date > snapshots/created_at
       - name: Run try-runtime
-        uses: NodleCode/action-try-runtime@62a47e64e789d1c524d6c3e3c6ef36880a76901f
+        uses: NodleCode/action-try-runtime@v0
         with:
           url: ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}}
           snap: snapshots/eden-snapshot-full
