--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
           fail_ci_if_error: false
           files: lcov.info
 
-  try-runtime:
+  try-runtime-prepare:
     runs-on: ubuntu-latest-8-cores
     timeout-minutes: 50
 
@@ -107,6 +107,22 @@ jobs:
           target: ${{ env.target }}
       - name: Build runtime
         run: cargo build --release --features=try-runtime -p runtime-eden
+      - name: Upload runtime artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: try_runtime.wasm
+          path: target/release/wbuild/runtime-eden/runtime_eden.wasm
+
+  try-runtime-execute:
+    runs-on: ubuntu-latest
+    needs: try-runtime-prepare
+      
+    steps:
+      - name: Download runtime artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: try_runtime.wasm
+          path: try_runtime.wasm
       - name: Setup cache
         uses: actions/cache@v3
         id: cachedir
@@ -127,5 +143,5 @@ jobs:
         with:
           url: ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}}
           snap: snapshots/eden-snapshot-full
-          runtime: target/release/wbuild/runtime-eden/runtime_eden.wasm
+          runtime: try_runtime.wasm
           checks: all
