fix setup sccache fro try-runtime-prepare

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,8 @@ jobs:
         with:
           toolchain: ${{ env.toolchain }}
           target: ${{ env.target }}
+      - name: Setup sccache
+        uses: mozilla-actions/sccache-action@v0.0.3
       - name: Build runtime
         run: cargo build --release --features=try-runtime -p runtime-eden
       - name: Upload runtime artifact
