use spec version instead of node version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,11 +116,11 @@ jobs:
         run: |
          echo -n "eden_rev=" >> $GITHUB_OUTPUT
          curl -s --request POST   --url https://nodle-parachain.api.onfinality.io/public   --header 'Content-Type: application/json'   --data '{
-             "jsonrpc": "2.0", 
-              "method": "system_version",    
+             "jsonrpc": "2.0",
+              "method": "state_getRuntimeVersion",
               "params": [],
               "id": 1
-            }' | jq '{"result"}[]'| sed 's/^"/"try-runtime-snap-eden/' >> $GITHUB_OUTPUT
+            }' | jq .result.specVersion | sed 's/^/try-runtime-snapshot-eden-spec-/' >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
         id: get_version
       - name: Setup cache
