artifacts are downloaded as directories

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Upload runtime artifact
         uses: actions/upload-artifact@v2
         with:
-          name: try_runtime.wasm
+          name: try_runtime
           path: target/release/wbuild/runtime-eden/runtime_eden.wasm
 
   try-runtime-execute:
@@ -109,8 +109,8 @@ jobs:
       - name: Download runtime artifact
         uses: actions/download-artifact@v2
         with:
-          name: try_runtime.wasm
-          path: try_runtime.wasm
+          name: try_runtime
+          path: try_runtime
       - name: Check Version
         run: |
          echo -n "eden_rev=" >> $GITHUB_OUTPUT
@@ -138,5 +138,5 @@ jobs:
         with:
           url: ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}}
           snap: snapshots/eden-snapshot-full
-          runtime: try_runtime.wasm
+          runtime: try_runtime/runtime_eden.wasm
           checks: all
