--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -226,7 +226,7 @@ pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
 pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
-orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.0.0", default-features = false }
-orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.0.0", default-features = false }
+orml-xtokens = { git = "https://github.com/NodleCode/open-runtime-module-library.git", branch = "iso/polkadot-v1.0.0", default-features = false }
+orml-traits = { git = "https://github.com/NodleCode/open-runtime-module-library.git", branch = "iso/polkadot-v1.0.0", default-features = false }
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
