CI: Allow warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ env:
   try-runtime-uri: wss://eden-rpc.dwellir.com:443/
   SCCACHE_GHA_ENABLED: "true"
   RUSTC_WRAPPER: "sccache"
+  RUSTFLAGS: ""
 
 jobs:
   lints:
