Reintegrate uniques pallet and cleanup CLI

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -24,6 +24,7 @@ std = [
   "pallet-mandate/std",
   "pallet-membership/std",
   "pallet-multisig/std",
+  "pallet-nodle-uniques/std",
   "pallet-sponsorship/std",
   "pallet-offences/std",
   "pallet-insecure-randomness-collective-flip/std",
@@ -93,6 +94,7 @@ runtime-benchmarks = [
   "pallet-preimage/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-uniques/runtime-benchmarks",
+  "pallet-nodle-uniques/runtime-benchmarks",
   "pallet-sponsorship/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
   "pallet-collator-selection/runtime-benchmarks",
@@ -121,6 +123,7 @@ try-runtime = [
   "pallet-membership/try-runtime",
   "pallet-multisig/try-runtime",
   "pallet-sponsorship/try-runtime",
+  "pallet-nodle-uniques/try-runtime",
   "pallet-offences/try-runtime",
   "pallet-insecure-randomness-collective-flip/try-runtime",
   "pallet-reserve/try-runtime",
@@ -226,6 +229,7 @@ pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
 pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
+pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }
 orml-xtokens = { git = "https://github.com/NodleCode/open-runtime-module-library.git", branch = "iso/polkadot-v1.0.0", default-features = false }
 orml-traits = { git = "https://github.com/NodleCode/open-runtime-module-library.git", branch = "iso/polkadot-v1.0.0", default-features = false }
 [build-dependencies]
