get runtime ready for state migration

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -76,6 +76,8 @@ std = [
   "sp-version/std",
   "sp-npos-elections/std",
   "pallet-xcm-benchmarks/std",
+
+  "pallet-state-trie-migration/std",
 ]
 runtime-benchmarks = [
   "frame-benchmarking/runtime-benchmarks",
@@ -104,6 +106,8 @@ runtime-benchmarks = [
   "pallet-xcm-benchmarks/runtime-benchmarks",
   "cumulus-pallet-xcmp-queue/runtime-benchmarks",
   "sp-runtime/runtime-benchmarks",
+
+  "pallet-state-trie-migration/runtime-benchmarks",
 ]
 try-runtime = [
   "frame-executive/try-runtime",
@@ -142,6 +146,8 @@ try-runtime = [
   "pallet-xcm/try-runtime",
   "parachain-info/try-runtime",
   "orml-xtokens/try-runtime",
+
+  "pallet-state-trie-migration/try-runtime",
 ]
 
 [dependencies]
@@ -174,6 +180,7 @@ pallet-insecure-randomness-collective-flip = { git = "https://github.com/parityt
 pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
 pallet-preimage = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
 pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
+pallet-state-trie-migration = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
 pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
 pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
