add custom RPC patch to get proper MaxKeyLen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["node", "pallets/*", "primitives", "runtimes/*", "support"]
+members = ["node", "node/rpcs/*", "pallets/*", "primitives", "runtimes/*", "support"]
 resolver = "1"
 
 [profile.release]
