--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -100,6 +100,7 @@ xcm = { git = "https://github.com/paritytech/polkadot", default-features = false
 
 # Temporary
 state-trie-migration-rpc = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42", package = "substrate-state-trie-migration-rpc" }
+nodle-rpc-utils = { path = "./rpcs/utils" }
 
 [dev-dependencies]
 hex-literal = "0.3.4"
