CI save snapshot

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,3 +141,8 @@ jobs:
           snap: snapshots/eden-snapshot-full
           runtime: try_runtime/runtime_eden.wasm
           checks: all
+      - name: Upload snap artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: edensnap
+          path: snapshots/eden-snapshot-full
