feat(runtime-eden): add pallet_identity

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -42,6 +42,7 @@ std = [
   "pallet-contracts-primitives/std",
   "pallet-contracts/std",
   "pallet-xcm/std",
+  "pallet-identity/std",
   "polkadot-parachain/std",
   "polkadot-runtime-common/std",
   "xcm/std",
@@ -100,6 +101,7 @@ runtime-benchmarks = [
   "pallet-collator-selection/runtime-benchmarks",
   "pallet-membership/runtime-benchmarks",
   "pallet-contracts/runtime-benchmarks",
+  "pallet-identity/runtime-benchmarks",
   "pallet-xcm/runtime-benchmarks",
   "xcm-builder/runtime-benchmarks",
   "xcm-executor/runtime-benchmarks",
@@ -137,6 +139,7 @@ try-runtime = [
   "pallet-aura/try-runtime",
   "pallet-collator-selection/try-runtime",
   "pallet-contracts/try-runtime",
+  "pallet-identity/try-runtime",
   "cumulus-pallet-aura-ext/try-runtime",
   "cumulus-pallet-dmp-queue/try-runtime",
   "cumulus-pallet-parachain-system/try-runtime",
@@ -183,6 +186,7 @@ pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/parityt
 pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
 pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
 pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
+pallet-identity = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
 
 cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
 pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
