ci.yml --no-idempotency-checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,7 +140,7 @@ jobs:
           url: ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}}
           snap: snapshots/eden-snapshot-full
           runtime: try_runtime/runtime_eden.wasm
-          checks: all
+          checks: "all --no-idempotency-checks"
       - name: Upload snap artifact
         uses: actions/upload-artifact@v2
         with:
