--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -157,7 +157,7 @@ static_assertions = "1.1.0"
 getrandom = { version = "0.2", features = ["js"] }
 safe-mix = { version = "1.0.1", default-features = false }
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-hex-literal = { version = "0.3.4", optional = true }
+hex-literal = { version = "0.4.1" }
 log = { version = "0.4.17", default-features = false }
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0.152", optional = true, features = ["derive"] }
