CI: latest try-runtime-action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,13 +135,13 @@ jobs:
           install -d snapshots
           date > snapshots/created_at
       - name: Run try-runtime
-        uses: NodleCode/action-try-runtime@dev
+        uses: NodleCode/action-try-runtime@v0.5.1
         with:
           url: ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}}
           snap: snapshots/eden-snapshot-full
           runtime: try_runtime/runtime_eden.wasm
           checks: "all"
-          options: "--no-idempotency-checks"
+          options: "--disable-idempotency-checks"
       - name: Upload snap artifact
         uses: actions/upload-artifact@v3
         with:
