Upgrade chain to v1.0.0 (#791)
* Upgrade towards 1.0.0
* Refactor BlockNumber to BlockNumberFor
   https://github.com/paritytech/polkadot/pull/7431 
   https://github.com/paritytech/substrate/pull/14437
* Refactor BlockNumber to BlockNumberFor
* GenesisBuild DefaultNoBound
* Pallet consensus new interface
    https://github.com/paritytech/cumulus/issues/2782
    https://github.com/paritytech/cumulus/pull/2801
* Cleanup integration
* Clean up benchmarks
* Clean up type depencies
* Auto reformat
* construct_runtime
* CI: Allow warnings
* Remove index and block-number from grant and allocation tests
* Implement missing members
* Genesis build config for reserve pallet
* Reserved pallet test case
* Update test dependencies
* fix(nodle-parachain): Fix issue of not finding public pallet identifiers plus the contract API required changes
* Subrstrate rpc server: break legacy CLI options and remove "backward compatible HTTP server" #13384
    https://github.com/paritytech/substrate/pull/13384
* Ignore one benchmark in xcm_config
* Import BuildStorage
* Build storage test case
* Restore uniques pallet
* Auto reformat
* Uniques test
* Remove warnings and errors
* Reintegrate uniques pallet and cleanup CLI
* RuntimeGenesisConfig
* Collections are no longer Copy
* Add some migrations
* Clippy warnings
* Update after review
* CI save snapshot
* Use action 0.3.3
* GH actions
* chore: clean up and remove redundant clones
* feat(runtime-eden): add pallet_identity
* fix(runtime-eden): add missing pallet_identity weight file
* Add doc link.
* ci.yml --no-idempotency-checks
* Fails on try-runtime build:
* Multiblock migration
* Update benchmark script, all pallets in script
* Update benchmarks
* fix broken benchmark integration
* Update pallet_contract weights
* Remove dead code
* Benchmark frame_system
* Benchmarks for pallet_scheduler
* Cargo update
* Estimate weights
* Code formatting
* no account aliasing for xcm
* Added som

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,13 @@ env:
   try-runtime-uri: wss://eden-rpc.dwellir.com:443/
   SCCACHE_GHA_ENABLED: "true"
   RUSTC_WRAPPER: "sccache"
+  RUSTFLAGS: ""
 
 jobs:
   lints:
     runs-on: ubuntu-latest-8-cores
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup sccache
         uses: mozilla-actions/sccache-action@v0.0.3
       - uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -41,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest-8-cores
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.toolchain }}
@@ -58,7 +59,7 @@ jobs:
     runs-on: ubuntu-latest-4-cores
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.toolchain }}
@@ -82,7 +83,7 @@ jobs:
     runs-on: ubuntu-latest-8-cores
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install protobuf-compiler
         run: |
          sudo apt-get install protobuf-compiler
@@ -96,7 +97,7 @@ jobs:
       - name: Build runtime
         run: cargo build --release --features=try-runtime -p runtime-eden
       - name: Upload runtime artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: try_runtime
           path: target/release/wbuild/runtime-eden/runtime_eden.wasm
@@ -134,9 +135,15 @@ jobs:
           install -d snapshots
           date > snapshots/created_at
       - name: Run try-runtime
-        uses: NodleCode/action-try-runtime@v0.3.0
+        uses: NodleCode/action-try-runtime@v0.5.1
         with:
           url: ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}}
           snap: snapshots/eden-snapshot-full
           runtime: try_runtime/runtime_eden.wasm
-          checks: all
+          checks: "all"
+          options: "--disable-idempotency-checks"
+      - name: Upload snap artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: edensnap
+          path: snapshots/eden-snapshot-full
