Add a lint for json files (#812)
* Add a lint for json files
* JSON syntax has no comments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,14 @@ env:
   RUSTFLAGS: ""
 
 jobs:
+  json-lints:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check for json syntax errors 1
+        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json`; do echo Checking $i:; json_pp <$i >/dev/null || echo ERROR: $i failed; done"
+      - name: Check for json syntax errors 2
+        run: "for i in `git ls-tree --full-tree -r --name-only HEAD |grep json`; do echo Checking $i:; json_pp <$i >/dev/null ; done"
   lints:
     runs-on: ubuntu-latest-8-cores
     steps:
