--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.toolchain }}
-          components: rustfmt, clippy
+          components: rustfmt, clippy, rust-src
           target: ${{ env.target }}
       - name: Rustfmt Check
         uses: actions-rust-lang/rustfmt@v1
