Update CI for rust 1.75 stable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.toolchain }}
-          components: rustfmt, clippy
+          components: rustfmt, clippy, rust-src
           target: ${{ env.target }}
       - name: Rustfmt Check
         uses: actions-rust-lang/rustfmt@v1
@@ -54,6 +54,7 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.toolchain }}
+          components: rust-src
           target: ${{ env.target }}
       - name: Install protobuf-compiler
         run: |
@@ -73,6 +74,7 @@ jobs:
         with:
           toolchain: ${{ env.toolchain }}
           target: ${{ env.target }}
+          components: rust-src
       - name: Install protobuf-compiler
         run: |
           sudo apt-get install protobuf-compiler
@@ -100,6 +102,7 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.toolchain }}
+          components: rust-src
           target: ${{ env.target }}
       - name: Setup sccache
         uses: mozilla-actions/sccache-action@v0.0.3
