--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -3,6 +3,9 @@ name: DevContainer
 on:
   schedule:
     - cron:  '0 0 * * 0'
+  pull_request:
+    branches:
+      - master
 
 jobs:
 
@@ -27,4 +30,4 @@ jobs:
         with:
           imageName: ghcr.io/nodlecode/devcontainer-chain
           cacheFrom: ghcr.io/nodlecode/devcontainer-chain
-          push: always
+          push: ${{ github.event_name != 'pull_request' }}
