Run devcontainer on CI but only push from branch

--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -25,9 +25,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Prepare Env 
+        id: prepare
+        run: |
+           ([[ ${{ github.event_name == 'pull_request' }} == true ]] && echo "push=never" || echo "push=always" ) >> $GITHUB_OUTPUT
       - name: Pre-build dev container image
         uses: devcontainers/ci@v0.3
         with:
           imageName: ghcr.io/nodlecode/devcontainer-chain
           cacheFrom: ghcr.io/nodlecode/devcontainer-chain
-          push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ steps.prepare.outputs.push }}
